active class to buttons

--- a/_grid.scss
+++ b/_grid.scss
@@ -73,3 +73,8 @@
         color: white;
     }
 }
+
+.grid .gridNav li.lastActiveGrid {
+    background-color: rgb(252, 117, 140);
+    color: white;
+}
