--- a/_nav.scss
+++ b/_nav.scss
@@ -21,7 +21,7 @@
         & li a{
             text-decoration: none;
             padding: .5rem;
-            color: inherit;
+            color: gray;
             display: block;
             margin: 0 5px;
             &:hover {
@@ -53,4 +53,9 @@
             }
         }
     }
+}
+
+.navBar .navItems .lastActiveNav {
+    background-color: rgb(252, 117, 140);
+    color: white;
 }
