--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
 .navBar .navItems li a {
   text-decoration: none;
   padding: .5rem;
-  color: inherit;
+  color: gray;
   display: block;
   margin: 0 5px;
 }
@@ -62,6 +62,11 @@
 .navBar .logo section p {
   font-size: 12px;
   color: #afafaf;
+}
+
+.navBar .navItems .lastActiveNav {
+  background-color: #fc758c;
+  color: white;
 }
 
 .mainContainer {
@@ -184,6 +189,11 @@
 
 .gridButton:hover {
   background-color: #a7a6a6;
+  color: white;
+}
+
+.grid .gridNav li.lastActiveGrid {
+  background-color: #fc758c;
   color: white;
 }
 
