--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,8 @@
   letter-spacing: 3px;
   font-size: 16px;
   font-weight: 300;
-  width: 100%;
+  max-width: 600px;
+  min-width: 200px;
   text-align: center;
   line-height: 25px;
 }
