a little side margin to gridnav buttons

--- a/_grid.scss
+++ b/_grid.scss
@@ -25,6 +25,7 @@
         & li{
             cursor: pointer;
             padding: .5rem 1rem;
+            margin: 0 5px;
             &:hover{
                 background-color: rgb(252, 117, 140);
                 color: white;
